Fix logo overlap on small screens

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -32,3 +32,11 @@
 .navbar__brand b {
   margin-left: 5px;
 }
+
+.navbar--fixed-top {
+  height: 4rem;
+}
+
+.navbar__logo {
+  height: 2.8rem;
+}
